--- a/css/addons/unraid/login-page/retro-terminal/white.css
+++ b/css/addons/unraid/login-page/retro-terminal/white.css
@@ -10,7 +10,7 @@
 --body-before:#70d7f61a;
 --body-after: #70d7f633;
 --body-animation: flicker;
---logo: url(https://theme-park.dev/css/addons/unraid/login-page/alien/logo/wings_shadow.png) center no-repeat;
+--logo: url(https://github.com/KhaosMonkey/theme.park/blob/master/css/addons/unraid/login-page/Khaotic2.png) center no-repeat;
 --text-color: #ffffff;
 --input-color: #ffffff;
 --link-color: #ffffff;
